--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <nav class="navbar navbar-expand-md ">
             <div class="container">
-                <a class="navbar-brand toggle-brand" href="#"><img src="./assets/images/logo.png" alt=""></a>
+                <a class="navbar-brand toggle-brand" href="#"><img src="./assets/images/logo.png" class="img-fluid" alt=""></a>
                 <button class="toggle-btn-mobile btn">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -520,25 +520,25 @@
     <section id="counter">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="counter">
                         <h2>219</h2>
                         <p>Satisfied Client</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="counter">
                         <h2>333</h2>
                         <p>Total Employeest</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="counter">
                         <h2>444</h2>
                         <p>Finished Project</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="counter">
                         <h2>555</h2>
                         <p>Happy Customer</p>
