--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -85,10 +85,10 @@
         <!--mobile menu starts-->
     <ul class="navbar-nav mobile-menu">
         <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="./about-us/about-us.html">About Us</a>
+            <a class="nav-link" href="about-us/about-us.html">About Us</a>
         </li>
 
 
@@ -98,16 +98,16 @@
 
             <ul class="collapse" id="dropdown-list">
                 <li class="nav-item border-0">
-                    <a class="nav-link" href="./blog-list-view/blog-list-view.html">Blog list page</a>
+                    <a class="nav-link" href="../blog-list-view/blog-list-view.html">Blog list page</a>
                 </li>
                 <li class="nav-item border-0">
-                    <a class="nav-link" href="./blog-details-view/blog-details-view.html">Blog details page</a>
+                    <a class="nav-link" href="../blog-details-view/blog-details-view.html">Blog details page</a>
                 </li>
                 <li class="nav-item border-0">
-                    <a class="nav-link" href="./error-page/error-page.html">Error-page</a>
+                    <a class="nav-link" href="../error-page/error-page.html">Error-page</a>
                 </li>
                 <li class="nav-item border-0">
-                    <a class="nav-link" href="./coming-soon-page/coming-soon-page.html">Coming-Soon-page</a>
+                    <a class="nav-link" href="../coming-soon-page/coming-soon-page.html">Coming-Soon-page</a>
                 </li>
             </ul>
         </li>
@@ -116,26 +116,26 @@
 
 
         <li class="nav-item">
-            <a class="nav-link" href="./portfolio/portfolio.html">Portfolio</a>
+            <a class="nav-link" href="../portfolio/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#dropdown-list2" data-bs-toggle="collapse">Our Blog <span class="nav-arrow"><i class="fas fa-chevron-right"></i></span></a>
 
             <ul class="collapse" id="dropdown-list2">
                                 <li class="nav-item border-0">
-                                    <a class="nav-link" href="./blog-grid-view/blog-grid-view.html">Blog grid page</a>
+                                    <a class="nav-link" href="../blog-grid-view/blog-grid-view.html">Blog grid page</a>
                                 </li>
                                 <li class="nav-item border-0">
-                                    <a class="nav-link" href="./blog-list-view/blog-list-view.html">Blog list page</a>
+                                    <a class="nav-link" href="../blog-list-view/blog-list-view.html">Blog list page</a>
                                 </li>
                                 <li class="nav-item border-0">
-                                    <a class="nav-link" href="./blog-details-view/blog-details-view.html">Blog details page</a>
+                                    <a class="nav-link" href="../blog-details-view/blog-details-view.html">Blog details page</a>
                                 </li>
                             </ul>
 
         </li>
         <li class="nav-item border-0">
-            <a class="nav-link" href="./contact-us/contact.html">Contact Us</a>
+            <a class="nav-link" href="../contact-us/contact.html">Contact Us</a>
         
         </li>
 
@@ -180,7 +180,7 @@
                             </ol>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="../contact-us/contact.html">Contact Us</a>
                         </li>
 
 
