--- a/blog-list-view/blog-list-view.html
+++ b/blog-list-view/blog-list-view.html
@@ -156,12 +156,12 @@
                             <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about-us.html">About Us</a>
+                            <a class="nav-link" href="../about-us/about-us.html">About Us</a>
                         </li>
                         <li>
                             <a class="nav-link" href="#">Pages</a>
                             <ol>
-                                <li><a href="../blog-list-view/blog-list-view.html">Blog list page</a></li>
+                                <li><a href="blog-list-view/blog-list-view.html">Blog list page</a></li>
                                 <li><a href="../blog-details-view/blog-details-view.html">Blog details page</a></li>
                                 <li><a href="../error-page/error-page.html">Error-page</a></li>
                                 <li><a href="../coming-soon-page/coming-soon-page.html">Coming-Soon-page</a></li>
@@ -179,7 +179,7 @@
                             </ol>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="../contact-us/contact.html">Contact Us</a>
                         </li>
 
 
