--- a/blog-details-view/blog-details-view.html
+++ b/blog-details-view/blog-details-view.html
@@ -29,22 +29,21 @@
 </head>
 
 <body>
-
     <!-- ========== top header starts here  ========== -->
     <section id="topheader">
         <div class="container">
             <div class="row align-items-center">
-                <div class="top-left col-lg-3 ">
+                <div class="top-left col-lg-3 col-md-4">
                     <p>
                         <i class="fa fa-map-marker"></i> 1234, Park Street, New York, America
                     </p>
 
                 </div>
-                <div class="top-mid col-lg-6 text-center">
+                <div class="top-mid col-lg-6 col-md-4 text-center">
                     <p>Welcome to <span> PRODUSTRY </span></p>
 
                 </div>
-                <div class="top-right col-lg-3">
+                <div class="top-right col-lg-3 col-md-4">
                     <ul>
                         <li>
                             <a href="#">
@@ -77,17 +76,80 @@
             </div>
         </div>
     </section>
-    <!-- ========== top header starts here ========== -->
 
+    <!-- ========== top header starts here ========== -->
     <!-- ========== bottom header starts here========== -->
+
+    <!--mobile menu starts-->
+    <ul class="navbar-nav mobile-menu">
+        <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="../about-us/about-us.html">About Us</a>
+        </li>
+
+
+
+        <li class="nav-item">
+            <a class="nav-link" href="#dropdown-list" data-bs-toggle="collapse">Pages <span class="nav-arrow"><i
+                        class="fas fa-chevron-right"></i></span></a>
+
+            <ul class="collapse" id="dropdown-list">
+                <li class="nav-item border-0">
+                    <a class="nav-link" href="../blog-list-view/blog-list-view.html">Blog list page</a>
+                </li>
+                <li class="nav-item border-0">
+                    <a class="nav-link" href="blog-details-view/blog-details-view.html">Blog details page</a>
+                </li>
+                <li class="nav-item border-0">
+                    <a class="nav-link" href="../error-page/error-page.html">Error-page</a>
+                </li>
+                <li class="nav-item border-0">
+                    <a class="nav-link" href="../coming-soon-page/coming-soon-page.html">Coming-Soon-page</a>
+                </li>
+            </ul>
+        </li>
+
+
+
+
+        <li class="nav-item">
+            <a class="nav-link" href="../portfolio/portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#dropdown-list2" data-bs-toggle="collapse">Our Blog <span class="nav-arrow"><i
+                        class="fas fa-chevron-right"></i></span></a>
+
+            <ul class="collapse" id="dropdown-list2">
+                <li class="nav-item border-0">
+                    <a class="nav-link" href="../blog-grid-view/blog-grid-view.html">Blog grid page</a>
+                </li>
+                <li class="nav-item border-0">
+                    <a class="nav-link" href="../blog-list-view/blog-list-view.html">Blog list page</a>
+                </li>
+                <li class="nav-item border-0">
+                    <a class="nav-link" href="../blog-details-view/blog-details-view.html">Blog details page</a>
+                </li>
+            </ul>
+
+        </li>
+        <li class="nav-item border-0">
+            <a class="nav-link" href="../contact-us/contact.html">Contact Us</a>
+
+        </li>
+
+    </ul>
+
+    <!--mobile menu ends-->
+
     <section id="bottomheader">
 
-        <nav class="navbar navbar-expand-lg ">
+        <nav class="navbar navbar-expand-md ">
             <div class="container">
-                <a class="navbar-brand toggle-brand" href="#"><img src="../assets/images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand toggle-brand" href="#"><img src="../assets/images/logo.png" class="img-fluid"
+                        alt=""></a>
+                <button class="toggle-btn-mobile btn">
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -102,7 +164,7 @@
                             <a class="nav-link" href="#">Pages</a>
                             <ol>
                                 <li><a href="../blog-list-view/blog-list-view.html">Blog list page</a></li>
-                                <li><a href="blog-details-view.html">Blog details page</a></li>
+                                <li><a href="blog-details-view/blog-details-view.html">Blog details page</a></li>
                                 <li><a href="../error-page/error-page.html">Error-page</a></li>
                                 <li><a href="../coming-soon-page/coming-soon-page.html">Coming-Soon-page</a></li>
                             </ol>
@@ -115,11 +177,11 @@
                             <ol>
                                 <li><a href="../blog-grid-view/blog-grid-view.html">Blog grid page</a></li>
                                 <li><a href="../blog-list-view/blog-list-view.html">Blog list page</a></li>
-                                <li><a href="blog-details-view/blog-details-view.html">Blog details page</a></li>
+                                <li><a href="../blog-details-view/blog-details-view.html">Blog details page</a></li>
                             </ol>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="../contact-us/contact.html">Contact Us</a>
                         </li>
 
 
@@ -160,7 +222,7 @@
             <div class="row">
                 <div class="col-lg-12 top-list">
                     <div class="row">
-                        <div class="col-lg-2 d-flex align-items-center">
+                        <div class="col-md-2 col-sm-12 d-flex align-items-center th-list">
                             <div class="th-links">
 
                                 <a href="#"><i class="fas fa-th"></i></a>
@@ -168,7 +230,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-6 select-list">
+                        <div class="col-md-6 col-sm-12 select-list">
                             <span>Sort By:</span>
                             <select name="" id="">
                                 <option value="">Name</option>
@@ -184,7 +246,7 @@
                             </select>
 
                         </div>
-                        <div class="col-lg-4 next">
+                        <div class="col-md-4 col-sm-12 next">
                             <span class="pages">Pages:</span>
                             <nav aria-label="Page navigation example">
                                 <ul class="pagination">
@@ -649,7 +711,7 @@
     <section id="footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 footer-one">
+                <div class="col-lg-3 col-sm-6 footer-one">
                     <a href="#"><img src="../assets/images/footer-logo.png" class="img-fluid" alt=""></a>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                         the industry's. unknown printer took a galley of type and scrambled it to make a type.</p>
@@ -661,7 +723,7 @@
                         <a href="#"><i class="fa fa-pinterest"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 footer-two">
+                <div class="col-lg-3 col-sm-6 footer-two">
                     <h3>Contact Us</h3>
                     <div class="address">
                         <div class="icon-add">
@@ -691,7 +753,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 footer-three">
+                <div class="col-lg-2 col-sm-6 footer-three">
                     <h3>Important Links</h3>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -703,7 +765,7 @@
                     </ul>
 
                 </div>
-                <div class="col-lg-4 footer-four">
+                <div class="col-lg-4 col-sm-6 footer-four">
                     <h3>Latest News</h3>
                     <div class="footer-news">
                         <div class="footer-news-img">
@@ -734,10 +796,10 @@
                 </div>
             </div>
 
-
         </div>
+
     </section>
-    </div>
+    
     <!-- ========== footer section Ends here ========== -->
 
     <!-- ========== copyright section starts here  ========== -->
