--- a/coming-soon-page/coming-soon-page.html
+++ b/coming-soon-page/coming-soon-page.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="row text-center justify-content-center comming-main">
-                    <div class="col-lg-3 comming-soon-timer">
+                    <div class="col-md-3 col-sm-6 comming-soon-timer">
                         <div class="timer-items">
                             <div class="timers">
                                 <h2>00</h2>
@@ -58,19 +58,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 comming-soon-timer">
+                    <div class="col-md-3 col-sm-6 comming-soon-timer">
                         <div class="timer-items">
                             <div class="timers"><h2>00</h2>
                         <p>Hours</p></div>
                         </div>
                     </div>
-                    <div class="col-lg-3 comming-soon-timer">
+                    <div class="col-md-3 col-sm-6 comming-soon-timer">
                         <div class="timer-items">
                             <div class="timers"><h2>00</h2>
                         <p>Minutes</p></div>
                         </div>
                     </div>
-                    <div class="col-lg-3 comming-soon-timer">
+                    <div class="col-md-3 col-sm-6 comming-soon-timer">
                         <div class="timer-items">
                             <div class="timers">
                                 <h2>00</h2>
@@ -82,7 +82,7 @@
                 <div class="col-lg-12">
                     <div class="subscribe text-center">
                         <h4>Subscribe to Get Notified</h4>
-                        <div class="input-group">
+                        <div class="input-group input-group-custom">
                             <input type="text" class="form-control" placeholder="Enter your Email">
                             <span class="input-group-addon">SUBSCRIBE</span>
                         </div>
