--- a/error-page/error-page.html
+++ b/error-page/error-page.html
@@ -85,6 +85,14 @@
 
     <!--mobile menu starts-->
     <ul class="navbar-nav mobile-menu">
+        <li class="nav-item border-0 menu-custom">
+            <a href="#">MENU</a>
+            <span>
+                <button class="toggle-btn-mobile btn">
+                    <i class="far fa-times"></i>
+                </button>
+            </span>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="../index.html">Home</a>
         </li>
@@ -141,6 +149,16 @@
             <a class="nav-link" href="../contact-us/contact.html">Contact Us</a>
 
         </li>
+        <div class="footer-one text-center mt-3">
+                    
+                    <div class="footer-icons mobile-menu-icons">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                    </div>
+                </div>
 
     </ul>
 
